--- a/bestseller.html
+++ b/bestseller.html
@@ -32,7 +32,7 @@
                     <button type="submit">Search</button>
                     <div id="search-suggestions" class="suggestions-dropdown"></div>
                     <nav>
-                        <a href="login.html">Login</a> &nbsp; | &nbsp;
+                        <a href="login.html">Login</a> &nbsp; |
                         <a href="carts.html">My Carts</a>
                     </nav>
                 </div>
@@ -41,7 +41,7 @@
     </header>
 
     <nav class="main-nav">
-        <a href="index.html"><u>Home</u></a> &nbsp; | &nbsp;
+        <a href="index.html"><u>Home</u></a> &nbsp; |
 
         <!-- Collection Dropdown -->
         <div class="dropdown">
@@ -64,32 +64,36 @@
         
 
         <section id="girlsdress">
-            <h2>Baby Girl Dress</h2>
+            <h2>Best Seller</h2>
 
             <div class="image-container">
                 <div class="image-item">
-                    <img src="Pictures/Dress.jpg" alt="Long Sleeve Baby Boy Girl Bodysuit">
-                    <p>Long Sleeve Baby Girl Bodysuit</p>
+                    <img src="https://www.lamaisondumonogramme.com/cdn/shop/products/la-maison-du-monogramme-embroidered-blue-baby-boy-coming-home-outfit-31552823623831_900x.jpg?v=1627983172" 
+                    alt="BestSeller1">
+                    <p>Newborn Baby Boy White Coming Home Outfit With Full Name Blue Embroidery</p>
                 </div>
                 <div class="image-item">
-                    <img src="Pictures/Socks.jpg" alt="Socks">
-                    <p>Girls Solid Knee-High Socks Stockings</p>
+                    <img src="https://i5.walmartimages.com/seo/Baby-Boy-12-Months-4PC-Gentleman-T-Shirt-Baby-Bowtie-Cloth-Toddler-Wedding-Pants-Boy-Suit-Vest-Sets-Boys-Outfits-Set-Toddler-Name-Brand-Clothes_26a59edc-0c82-4bde-a4cc-9d4dc60a7947.5c479aa01216712be955870a094758db.jpeg?odnHeight=640&odnWidth=640&odnBg=FFFFFF" 
+                    alt="BestSeller2">
+                    <p>Baby Boy 12 Months 4PC Gentleman T Shirt Baby Bowtie Cloth Toddler Wedding Pants Boy Suit Vest Sets Boys Outfits&Set Toddler Name Brand Clothes</p>
                 </div>
                 <div class="image-item">
-                    <img src="Pictures/Girl trouser.jpg" alt="Girl Trouser">
-                    <p>Floral Size Small to Medium (7-8) Leggings</p>
+                    <img src="https://d3r47b04tm9cwy.cloudfront.net/product-images/BYT6710_New-1.webp" 
+                    alt="Best Seller">
+                    <p>2 in 1 Baby Horse Rider-Kids Ride-On Push Car</p>
                 </div>
 
                 </div>
                 <div class="image-container">
                 <div class="image-item">
-                    <img src="https://i5.walmartimages.com/seo/Baby-Boy-12-Months-4PC-Gentleman-T-Shirt-Baby-Bowtie-Cloth-Toddler-Wedding-Pants-Boy-Suit-Vest-Sets-Boys-Outfits-Set-Toddler-Name-Brand-Clothes_26a59edc-0c82-4bde-a4cc-9d4dc60a7947.5c479aa01216712be955870a094758db.jpeg?odnHeight=640&odnWidth=640&odnBg=FFFFFF" 
-                    alt="Baby Boy 12 Months 4PC Gentleman T Shirt Baby Bowtie Cloth Toddler Wedding Pants Boy Suit Vest Sets Boys Outfits&Set Toddler Name Brand Clothes">
-                    <p>Image 4</p>
+                    <img src="https://m.media-amazon.com/images/I/717PibPOFAL._AC_SL1500_.jpg" 
+                    alt="BestSeller4">
+                    <p>Floral Ruffle Sleeve Casual Beach Sundress Princess Skirt Clothes</p>
                 </div>
                 <div class="image-item">
-                    <img src="Pictures/Boy Dress.jpg" alt="Image 5">
-                    <p>Image 5</p>
+                    <img src="https://i5.walmartimages.com/seo/QIIBURR-Baby-Toys-Girls-Girl-Soft-Doll-Cute-Cuddly-Stuffed-Toy-Decoration-Companion_ecc2684d-b9e9-4f7b-8997-a8ba5d4661f1.f3c5db6291aa110b0be8350ce28373cd.jpeg" 
+                    alt="BestSeller5">
+                    <p>Soft Doll Cute Cuddly Stuffed Toy</p>
                 </div>
                 <div class="image-item">
                     <img src="Pictures/Dress.jpg" alt="Image 6">
