--- a/newarrival.html
+++ b/newarrival.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sana Sana Babu Nani Online Store</title>
+    <title>Login - Sana Sana Babu Nani Online Store</title>
     <style>
         body {
             font-family: 'Times New Roman', Times, serif;
@@ -11,10 +12,14 @@
             padding: 0;
             }
     </style>
+    <!-- Favicon -->
     <link rel="icon" href="Pictures/SSBNOS Logo.png" type="image/png">
+    <!-- External CSS -->
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+
     <header>
         <div class="header-container">
             <div class="header-flex">
@@ -27,7 +32,7 @@
                     <button type="submit">Search</button>
                     <div id="search-suggestions" class="suggestions-dropdown"></div>
                     <nav>
-                        <a href="login.html">Login</a> &nbsp; | &nbsp;
+                        <a href="login.html">Login</a> &nbsp; |
                         <a href="carts.html">My Carts</a>
                     </nav>
                 </div>
@@ -36,8 +41,9 @@
     </header>
 
     <nav class="main-nav">
-        <a href="index.html"><u>Home</u></a> &nbsp; | &nbsp;
+        <a href="index.html"><u>Home</u></a> &nbsp; |
 
+        <!-- Collection Dropdown -->
         <div class="dropdown">
             <button class="dropbtn"><u>Collection</u></button>
             <div class="dropdown-content">
@@ -58,19 +64,22 @@
         
 
         <section id="girlsdress">
-            <h2>Baby Girl Dress</h2>
+            <h2>New Arrival</h2>
 
             <div class="image-container">
                 <div class="image-item">
-                    <img src="Pictures/Dress.jpg" alt="Long Sleeve Baby Boy Girl Bodysuit">
+                    <img src="Pictures/Dress.jpg" 
+                    alt="Newarrival1">
                     <p>Long Sleeve Baby Girl Bodysuit</p>
                 </div>
                 <div class="image-item">
-                    <img src="Pictures/Socks.jpg" alt="Socks">
+                    <img src="Pictures/Socks.jpg" 
+                    alt="Newarrival2">
                     <p>Girls Solid Knee-High Socks Stockings</p>
                 </div>
                 <div class="image-item">
-                    <img src="Pictures/Girl trouser.jpg" alt="Girl Trouser">
+                    <img src="Pictures/Girl trouser.jpg" 
+                    alt="Newarrival3">
                     <p>Floral Size Small to Medium (7-8) Leggings</p>
                 </div>
 
@@ -78,16 +87,19 @@
                 <div class="image-container">
                 <div class="image-item">
                     <img src="https://i5.walmartimages.com/seo/Baby-Boy-12-Months-4PC-Gentleman-T-Shirt-Baby-Bowtie-Cloth-Toddler-Wedding-Pants-Boy-Suit-Vest-Sets-Boys-Outfits-Set-Toddler-Name-Brand-Clothes_26a59edc-0c82-4bde-a4cc-9d4dc60a7947.5c479aa01216712be955870a094758db.jpeg?odnHeight=640&odnWidth=640&odnBg=FFFFFF" 
-                    alt="Baby Boy 12 Months 4PC Gentleman T Shirt Baby Bowtie Cloth Toddler Wedding Pants Boy Suit Vest Sets Boys Outfits&Set Toddler Name Brand Clothes">
-                    <p>Image 4</p>
+                    alt="Newarrival4">
+                    <p>Wedding Pants Boy Suit Vest Sets Boys Set</p>
                 </div>
                 <div class="image-item">
-                    <img src="Pictures/Boy Dress.jpg" alt="Image 5">
-                    <p>Image 5</p>
+                    <img src="Pictures/Boy Dress.jpg" 
+                    alt="Newarrival5">
+                    <p>Children's Summer Vest Shorts Suit</p>
                 </div>
                 <div class="image-item">
-                    <img src="Pictures/Dress.jpg" alt="Image 6">
-                    <p>Image 6</p>
+                    <img src="https://static-01.daraz.com.np/p/8c99297620903925b1b47675e23da32b.jpg" 
+                    alt="Newarrival6">
+                    <p>Sleeve Puffy Sleeve Lace Ruffle Strawberry Print Sweet Princess Dress</p>
+                </div>
                 </div>
             </div>
 
