--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <button type="submit">Search</button>
                     <div id="search-suggestions" class="suggestions-dropdown"></div>
                     <nav>
-                        <a href="login.html">Login</a> &nbsp; | &nbsp;
+                        <a href="login.html">Login</a> &nbsp; |
                         <a href="carts.html">My Carts</a>
                     </nav>
                 </div>
@@ -41,7 +41,7 @@
     </header>
 
     <nav class="main-nav">
-        <a href="index.html"><u>Home</u></a> &nbsp; | &nbsp;
+        <a href="index.html"><u>Home</u></a> &nbsp; |
 
         <!-- Collection Dropdown -->
         <div class="dropdown">
