--- a/toy.html
+++ b/toy.html
@@ -64,36 +64,39 @@
         
 
         <section id="girlsdress">
-            <h2>Baby Girl Dress</h2>
+            <h2>Baby Toys</h2>
 
             <div class="image-container">
                 <div class="image-item">
-                    <img src="Pictures/Dress.jpg" alt="Long Sleeve Baby Boy Girl Bodysuit">
-                    <p>Long Sleeve Baby Girl Bodysuit</p>
+                    <img src="https://d3r47b04tm9cwy.cloudfront.net/product-images/BYT6710_New-1.webp" 
+                    alt="Best Seller">
+                    <p>2 in 1 Baby Horse Rider-Kids Ride-On Push Car</p>
                 </div>
                 <div class="image-item">
-                    <img src="Pictures/Socks.jpg" alt="Socks">
-                    <p>Girls Solid Knee-High Socks Stockings</p>
+                    <img src="https://i5.walmartimages.com/seo/MOONTOY-Baby-Rattle-Toys-3-6-Months-Sensory-Babies-Teething-Infants-0-12-Newborn-Girl-Infant-Boy-Gifts-Set_5b9847cb-1204-4359-adcc-bb5afdceb755.e257cd63a923bd376caa2bf5e0f0d2ea.jpeg" alt="Socks">
+                    <p>Rattles Teether Toys Set with Storage Box</p>
                 </div>
                 <div class="image-item">
-                    <img src="Pictures/Girl trouser.jpg" alt="Girl Trouser">
-                    <p>Floral Size Small to Medium (7-8) Leggings</p>
+                    <img src="https://m.media-amazon.com/images/I/718MphFi9oL._AC_SL1500_.jpg" 
+                    alt="Best Seller">
+                    <p>STEAM Life Baby Piano Toys</p>
                 </div>
 
                 </div>
                 <div class="image-container">
                 <div class="image-item">
-                    <img src="https://i5.walmartimages.com/seo/Baby-Boy-12-Months-4PC-Gentleman-T-Shirt-Baby-Bowtie-Cloth-Toddler-Wedding-Pants-Boy-Suit-Vest-Sets-Boys-Outfits-Set-Toddler-Name-Brand-Clothes_26a59edc-0c82-4bde-a4cc-9d4dc60a7947.5c479aa01216712be955870a094758db.jpeg?odnHeight=640&odnWidth=640&odnBg=FFFFFF" 
+                    <img src="https://media.karousell.com/media/photos/products/2021/2/4/baby_crib_hanging_toys_1612414088_de372c6f_progressive.jpg" 
                     alt="Baby Boy 12 Months 4PC Gentleman T Shirt Baby Bowtie Cloth Toddler Wedding Pants Boy Suit Vest Sets Boys Outfits&Set Toddler Name Brand Clothes">
-                    <p>Image 4</p>
+                    <p>Baby crib hanging toys</p>
                 </div>
                 <div class="image-item">
-                    <img src="Pictures/Boy Dress.jpg" alt="Image 5">
-                    <p>Image 5</p>
+                    <img src="https://i5.walmartimages.com/seo/QIIBURR-Baby-Toys-Girls-Girl-Soft-Doll-Cute-Cuddly-Stuffed-Toy-Decoration-Companion_ecc2684d-b9e9-4f7b-8997-a8ba5d4661f1.f3c5db6291aa110b0be8350ce28373cd.jpeg" 
+                    alt="BestSeller5">
+                    <p>Soft Doll Cute Cuddly Stuffed Toy</p>
                 </div>
                 <div class="image-item">
-                    <img src="Pictures/Dress.jpg" alt="Image 6">
-                    <p>Image 6</p>
+                    <img src="https://static-01.daraz.com.np/p/d2057b96c7a8d66240b91cb06e91b54e.jpg_750x750.jpg_.webp" alt="Image 6">
+                    <p>Wooden Puzzle Montessori Toys Alphabet Number Shape Matching Early Educational Games</p>
                 </div>
             </div>
 
