--- a/newarrival.html
+++ b/newarrival.html
@@ -68,32 +68,30 @@
 
             <div class="image-container">
                 <div class="image-item">
-                    <img src="Pictures/Dress.jpg" 
-                    alt="Newarrival1">
-                    <p>Long Sleeve Baby Girl Bodysuit</p>
-                </div>
-                <div class="image-item">
-                    <img src="Pictures/Socks.jpg" 
-                    alt="Newarrival2">
-                    <p>Girls Solid Knee-High Socks Stockings</p>
+                    <img src="https://i5.walmartimages.com/seo/MOONTOY-Baby-Rattle-Toys-3-6-Months-Sensory-Babies-Teething-Infants-0-12-Newborn-Girl-Infant-Boy-Gifts-Set_5b9847cb-1204-4359-adcc-bb5afdceb755.e257cd63a923bd376caa2bf5e0f0d2ea.jpeg" alt="Socks">
+                    <p>Rattles Teether Toys Set with Storage Box</p>
                 </div>
                 <div class="image-item">
                     <img src="Pictures/Girl trouser.jpg" 
                     alt="Newarrival3">
                     <p>Floral Size Small to Medium (7-8) Leggings</p>
                 </div>
-
-                </div>
-                <div class="image-container">
-                <div class="image-item">
-                    <img src="https://i5.walmartimages.com/seo/Baby-Boy-12-Months-4PC-Gentleman-T-Shirt-Baby-Bowtie-Cloth-Toddler-Wedding-Pants-Boy-Suit-Vest-Sets-Boys-Outfits-Set-Toddler-Name-Brand-Clothes_26a59edc-0c82-4bde-a4cc-9d4dc60a7947.5c479aa01216712be955870a094758db.jpeg?odnHeight=640&odnWidth=640&odnBg=FFFFFF" 
-                    alt="Newarrival4">
-                    <p>Wedding Pants Boy Suit Vest Sets Boys Set</p>
-                </div>
                 <div class="image-item">
                     <img src="Pictures/Boy Dress.jpg" 
                     alt="Newarrival5">
                     <p>Children's Summer Vest Shorts Suit</p>
+                </div>
+
+                </div>
+                <div class="image-container">
+                <div class="image-item">
+                    <img src="Pictures/Socks.jpg" 
+                    alt="Newarrival2">
+                    <p>Girls Solid Knee-High Socks Stockings</p>
+                </div>
+                <div class="image-item">
+                    <img src="https://static-01.daraz.com.np/p/d2057b96c7a8d66240b91cb06e91b54e.jpg_750x750.jpg_.webp" alt="Image 6">
+                    <p>Wooden Puzzle Montessori Toys Alphabet Number Shape Matching Early Educational Games</p>
                 </div>
                 <div class="image-item">
                     <img src="https://static-01.daraz.com.np/p/8c99297620903925b1b47675e23da32b.jpg" 
