--- a/girlsdress.html
+++ b/girlsdress.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - Sana Sana Babu Nani Online Store</title>
+    <title>Girl Dress - Sana Sana Babu Nani Online Store</title>
     <style>
         body {
             font-family: 'Times New Roman', Times, serif;
@@ -107,17 +107,6 @@
         <p>&copy; 2024 Sana Sana Babu Nani Online Store. All rights reserved.</p>
     </footer>
 
-    <div id="ad-popup">
-        <div class="ad-content">
-            <h2>Special Offer!</h2>
-            <p>Get 10% off on your first purchase. Order Now!</p>
-            <img src="Pictures/ads.png" alt="Special Offer">
-            <br><br>
-            <button id="close-ad-btn">Close</button>
-        </div>
-    </div>
-
-    <script src="ads.js"></script>
     <script src="search.js"></script>
 </body>
 </html>
