--- a/newarrival.html
+++ b/newarrival.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - Sana Sana Babu Nani Online Store</title>
+    <title>New Arrival - Sana Sana Babu Nani Online Store</title>
     <style>
         body {
             font-family: 'Times New Roman', Times, serif;
@@ -68,17 +68,18 @@
 
             <div class="image-container">
                 <div class="image-item">
-                    <img src="https://i5.walmartimages.com/seo/MOONTOY-Baby-Rattle-Toys-3-6-Months-Sensory-Babies-Teething-Infants-0-12-Newborn-Girl-Infant-Boy-Gifts-Set_5b9847cb-1204-4359-adcc-bb5afdceb755.e257cd63a923bd376caa2bf5e0f0d2ea.jpeg" alt="Socks">
+                    <img src="https://i5.walmartimages.com/seo/MOONTOY-Baby-Rattle-Toys-3-6-Months-Sensory-Babies-Teething-Infants-0-12-Newborn-Girl-Infant-Boy-Gifts-Set_5b9847cb-1204-4359-adcc-bb5afdceb755.e257cd63a923bd376caa2bf5e0f0d2ea.jpeg" 
+                    alt="Newarrival1">
                     <p>Rattles Teether Toys Set with Storage Box</p>
                 </div>
                 <div class="image-item">
                     <img src="Pictures/Girl trouser.jpg" 
-                    alt="Newarrival3">
+                    alt="Newarrival2">
                     <p>Floral Size Small to Medium (7-8) Leggings</p>
                 </div>
                 <div class="image-item">
                     <img src="Pictures/Boy Dress.jpg" 
-                    alt="Newarrival5">
+                    alt="Newarrival3">
                     <p>Children's Summer Vest Shorts Suit</p>
                 </div>
 
@@ -86,11 +87,12 @@
                 <div class="image-container">
                 <div class="image-item">
                     <img src="Pictures/Socks.jpg" 
-                    alt="Newarrival2">
+                    alt="Newarrival4">
                     <p>Girls Solid Knee-High Socks Stockings</p>
                 </div>
                 <div class="image-item">
-                    <img src="https://static-01.daraz.com.np/p/d2057b96c7a8d66240b91cb06e91b54e.jpg_750x750.jpg_.webp" alt="Image 6">
+                    <img src="https://static-01.daraz.com.np/p/d2057b96c7a8d66240b91cb06e91b54e.jpg_750x750.jpg_.webp" 
+                    alt="Newarrival5">
                     <p>Wooden Puzzle Montessori Toys Alphabet Number Shape Matching Early Educational Games</p>
                 </div>
                 <div class="image-item">
@@ -109,17 +111,6 @@
         <p>&copy; 2024 Sana Sana Babu Nani Online Store. All rights reserved.</p>
     </footer>
 
-    <div id="ad-popup">
-        <div class="ad-content">
-            <h2>Special Offer!</h2>
-            <p>Get 10% off on your first purchase. Order Now!</p>
-            <img src="Pictures/ads.png" alt="Special Offer">
-            <br><br>
-            <button id="close-ad-btn">Close</button>
-        </div>
-    </div>
-
-    <script src="ads.js"></script>
     <script src="search.js"></script>
 </body>
 </html>
