--- a/bestseller.html
+++ b/bestseller.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - Sana Sana Babu Nani Online Store</title>
+    <title>Best Seller - Sana Sana Babu Nani Online Store</title>
     <style>
         body {
             font-family: 'Times New Roman', Times, serif;
@@ -75,11 +75,12 @@
                 <div class="image-item">
                     <img src="https://i5.walmartimages.com/seo/Baby-Boy-12-Months-4PC-Gentleman-T-Shirt-Baby-Bowtie-Cloth-Toddler-Wedding-Pants-Boy-Suit-Vest-Sets-Boys-Outfits-Set-Toddler-Name-Brand-Clothes_26a59edc-0c82-4bde-a4cc-9d4dc60a7947.5c479aa01216712be955870a094758db.jpeg?odnHeight=640&odnWidth=640&odnBg=FFFFFF" 
                     alt="BestSeller2">
-                    <p>Baby Boy 12 Months 4PC Gentleman T Shirt Baby Bowtie Cloth Toddler Wedding Pants Boy Suit Vest Sets Boys Outfits&Set Toddler Name Brand Clothes</p>
+                    <p>Baby Boy 12 Months 4PC Gentleman T Shirt Baby Bowtie Cloth Toddler 
+                        Wedding Pants Boy Suit Vest Sets Boys Outfits&Set Toddler Name Brand Clothes</p>
                 </div>
                 <div class="image-item">
                     <img src="https://d3r47b04tm9cwy.cloudfront.net/product-images/BYT6710_New-1.webp" 
-                    alt="Best Seller">
+                    alt="BestSeller3">
                     <p>2 in 1 Baby Horse Rider-Kids Ride-On Push Car</p>
                 </div>
 
@@ -96,8 +97,9 @@
                     <p>Soft Doll Cute Cuddly Stuffed Toy</p>
                 </div>
                 <div class="image-item">
-                    <img src="Pictures/Dress.jpg" alt="Image 6">
-                    <p>Image 6</p>
+                    <img src="Pictures/Dress.jpg" 
+                    alt="BestSeller6">
+                    <p>Long Sleeve Baby Boy Girl Bodysuit</p>
                 </div>
             </div>
 
@@ -109,17 +111,6 @@
         <p>&copy; 2024 Sana Sana Babu Nani Online Store. All rights reserved.</p>
     </footer>
 
-    <div id="ad-popup">
-        <div class="ad-content">
-            <h2>Special Offer!</h2>
-            <p>Get 10% off on your first purchase. Order Now!</p>
-            <img src="Pictures/ads.png" alt="Special Offer">
-            <br><br>
-            <button id="close-ad-btn">Close</button>
-        </div>
-    </div>
-
-    <script src="ads.js"></script>
     <script src="search.js"></script>
 </body>
 </html>
