--- a/toy.html
+++ b/toy.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - Sana Sana Babu Nani Online Store</title>
+    <title>Toy - Sana Sana Babu Nani Online Store</title>
     <style>
         body {
             font-family: 'Times New Roman', Times, serif;
@@ -32,7 +32,7 @@
                     <button type="submit">Search</button>
                     <div id="search-suggestions" class="suggestions-dropdown"></div>
                     <nav>
-                        <a href="login.html">Login</a> &nbsp; | &nbsp;
+                        <a href="login.html">Login</a> &nbsp; |
                         <a href="carts.html">My Carts</a>
                     </nav>
                 </div>
@@ -41,7 +41,7 @@
     </header>
 
     <nav class="main-nav">
-        <a href="index.html"><u>Home</u></a> &nbsp; | &nbsp;
+        <a href="index.html"><u>Home</u></a> &nbsp; |
 
         <!-- Collection Dropdown -->
         <div class="dropdown">
@@ -69,16 +69,17 @@
             <div class="image-container">
                 <div class="image-item">
                     <img src="https://d3r47b04tm9cwy.cloudfront.net/product-images/BYT6710_New-1.webp" 
-                    alt="Best Seller">
+                    alt="Toy1">
                     <p>2 in 1 Baby Horse Rider-Kids Ride-On Push Car</p>
                 </div>
                 <div class="image-item">
-                    <img src="https://i5.walmartimages.com/seo/MOONTOY-Baby-Rattle-Toys-3-6-Months-Sensory-Babies-Teething-Infants-0-12-Newborn-Girl-Infant-Boy-Gifts-Set_5b9847cb-1204-4359-adcc-bb5afdceb755.e257cd63a923bd376caa2bf5e0f0d2ea.jpeg" alt="Socks">
+                    <img src="https://i5.walmartimages.com/seo/MOONTOY-Baby-Rattle-Toys-3-6-Months-Sensory-Babies-Teething-Infants-0-12-Newborn-Girl-Infant-Boy-Gifts-Set_5b9847cb-1204-4359-adcc-bb5afdceb755.e257cd63a923bd376caa2bf5e0f0d2ea.jpeg" 
+                    alt="Toy2">
                     <p>Rattles Teether Toys Set with Storage Box</p>
                 </div>
                 <div class="image-item">
                     <img src="https://m.media-amazon.com/images/I/718MphFi9oL._AC_SL1500_.jpg" 
-                    alt="Best Seller">
+                    alt="Toy3">
                     <p>STEAM Life Baby Piano Toys</p>
                 </div>
 
@@ -86,16 +87,17 @@
                 <div class="image-container">
                 <div class="image-item">
                     <img src="https://media.karousell.com/media/photos/products/2021/2/4/baby_crib_hanging_toys_1612414088_de372c6f_progressive.jpg" 
-                    alt="Baby Boy 12 Months 4PC Gentleman T Shirt Baby Bowtie Cloth Toddler Wedding Pants Boy Suit Vest Sets Boys Outfits&Set Toddler Name Brand Clothes">
+                    alt="Toy4">
                     <p>Baby crib hanging toys</p>
                 </div>
                 <div class="image-item">
                     <img src="https://i5.walmartimages.com/seo/QIIBURR-Baby-Toys-Girls-Girl-Soft-Doll-Cute-Cuddly-Stuffed-Toy-Decoration-Companion_ecc2684d-b9e9-4f7b-8997-a8ba5d4661f1.f3c5db6291aa110b0be8350ce28373cd.jpeg" 
-                    alt="BestSeller5">
+                    alt="Toy5">
                     <p>Soft Doll Cute Cuddly Stuffed Toy</p>
                 </div>
                 <div class="image-item">
-                    <img src="https://static-01.daraz.com.np/p/d2057b96c7a8d66240b91cb06e91b54e.jpg_750x750.jpg_.webp" alt="Image 6">
+                    <img src="https://static-01.daraz.com.np/p/d2057b96c7a8d66240b91cb06e91b54e.jpg_750x750.jpg_.webp" 
+                    alt="Toy6">
                     <p>Wooden Puzzle Montessori Toys Alphabet Number Shape Matching Early Educational Games</p>
                 </div>
             </div>
@@ -108,17 +110,6 @@
         <p>&copy; 2024 Sana Sana Babu Nani Online Store. All rights reserved.</p>
     </footer>
 
-    <div id="ad-popup">
-        <div class="ad-content">
-            <h2>Special Offer!</h2>
-            <p>Get 10% off on your first purchase. Order Now!</p>
-            <img src="Pictures/ads.png" alt="Special Offer">
-            <br><br>
-            <button id="close-ad-btn">Close</button>
-        </div>
-    </div>
-
-    <script src="ads.js"></script>
     <script src="search.js"></script>
 </body>
 </html>
