--- a/boysdress.html
+++ b/boysdress.html
@@ -70,19 +70,17 @@
                 <div class="image-item">
                     <img src="https://m.media-amazon.com/images/I/71E3nNRe1uL._AC_UL1500_.jpg" 
                     alt="Boydress1">
-                    <p>Infant Baby Boy Clothes Gentleman Outfits Suits Summer 
-                        Short Sleeve Bowtie Bodysuit Shirts + Suspender Shorts</p>
+                    <p>Short Sleeve Bowtie Bodysuit Shirts + Suspender Shorts</p>
                 </div>
                 <div class="image-item">
                     <img src="https://www.lamaisondumonogramme.com/cdn/shop/products/la-maison-du-monogramme-embroidered-blue-baby-boy-coming-home-outfit-31552823623831_900x.jpg?v=1627983172" 
                     alt="Boydress2">
-                    <p>Newborn Baby Boy White Coming Home Outfit With Full Name Blue Embroidery</p>
+                    <p>White Coming Home Outfit + Full Name Blue Embroidery</p>
                 </div>
                 <div class="image-item">
                     <img src="https://s.alicdn.com/@sc04/kf/He248d5df55b5442684fcfcf3b96c5882n.png_720x720q50.png" 
                     alt="Boydress3">
-                    <p>Autumn And Winter Boys' Clothing Suit Thick Wool 
-                        Cartoon Bear Jacket Vest Pants 3pcs Cotton Girls Sports Suit Warm</p>
+                    <p>Thick Wool Cartoon Bear Jacket Vest Pants 3pcs Cotton</p>
                 </div>
 
                 </div>
@@ -90,18 +88,15 @@
                 <div class="image-item">
                     <img src="https://i5.walmartimages.com/seo/Baby-Boy-12-Months-4PC-Gentleman-T-Shirt-Baby-Bowtie-Cloth-Toddler-Wedding-Pants-Boy-Suit-Vest-Sets-Boys-Outfits-Set-Toddler-Name-Brand-Clothes_26a59edc-0c82-4bde-a4cc-9d4dc60a7947.5c479aa01216712be955870a094758db.jpeg?odnHeight=640&odnWidth=640&odnBg=FFFFFF" 
                     alt="Boydress4">
-                    <p>Baby Boy 12 Months 4PC Gentleman T Shirt Baby Bowtie 
-                        Cloth Toddler Wedding Pants Boy Suit Vest Sets Boys Outfits&Set Toddler Name Brand Clothes</p>
+                    <p>Gentleman T Shirt Baby Bowtie Cloth Toddler Wedding Sets</p>
                 </div>
                 <div class="image-item">
                     <img src="Pictures/Boy Dress.jpg" alt="Boydress5">
-                    <p>Children's Summer Vest Shorts Suit Boy Blazers Clothes 
-                        Performance Host Wedding Dress Kids Waistcoat Pants Bowtie Clothes Set</p>
+                    <p>Children's Summer Vest Shorts Suit</p>
                 </div>
                 <div class="image-item">
                     <img src="Pictures/Dress.jpg" alt="Boydress6">
-                    <p>Long Sleeve Baby Boy Bodysuit Muslin Cotton Spring Autumn 
-                        Kids Baby Rompers Clothes 0-24 Months Infant Newborn Jumpsuit</p>
+                    <p>Long Sleeve Baby Boy Girl Bodysuit</p>
                 </div>
             </div>
 
