--- a/newarrival.html
+++ b/newarrival.html
@@ -93,7 +93,7 @@
                 <div class="image-item">
                     <img src="https://static-01.daraz.com.np/p/d2057b96c7a8d66240b91cb06e91b54e.jpg_750x750.jpg_.webp" 
                     alt="Newarrival5">
-                    <p>Wooden Puzzle Montessori Toys Alphabet Number Shape Matching Early Educational Games</p>
+                    <p>Wooden Puzzle Montessori Toys Alphabet Number Shape Matching Educational Games</p>
                 </div>
                 <div class="image-item">
                     <img src="https://static-01.daraz.com.np/p/8c99297620903925b1b47675e23da32b.jpg" 
