--- a/bestseller.html
+++ b/bestseller.html
@@ -70,13 +70,12 @@
                 <div class="image-item">
                     <img src="https://www.lamaisondumonogramme.com/cdn/shop/products/la-maison-du-monogramme-embroidered-blue-baby-boy-coming-home-outfit-31552823623831_900x.jpg?v=1627983172" 
                     alt="BestSeller1">
-                    <p>Newborn Baby Boy White Coming Home Outfit With Full Name Blue Embroidery</p>
+                    <p>White Coming Home Outfit + Full Name Blue Embroidery</p>
                 </div>
                 <div class="image-item">
                     <img src="https://i5.walmartimages.com/seo/Baby-Boy-12-Months-4PC-Gentleman-T-Shirt-Baby-Bowtie-Cloth-Toddler-Wedding-Pants-Boy-Suit-Vest-Sets-Boys-Outfits-Set-Toddler-Name-Brand-Clothes_26a59edc-0c82-4bde-a4cc-9d4dc60a7947.5c479aa01216712be955870a094758db.jpeg?odnHeight=640&odnWidth=640&odnBg=FFFFFF" 
                     alt="BestSeller2">
-                    <p>Baby Boy 12 Months 4PC Gentleman T Shirt Baby Bowtie Cloth Toddler 
-                        Wedding Pants Boy Suit Vest Sets Boys Outfits&Set Toddler Name Brand Clothes</p>
+                    <p>Gentleman T Shirt Baby Bowtie Cloth Toddler Wedding Sets</p>
                 </div>
                 <div class="image-item">
                     <img src="https://d3r47b04tm9cwy.cloudfront.net/product-images/BYT6710_New-1.webp" 
