--- a/toy.html
+++ b/toy.html
@@ -98,7 +98,7 @@
                 <div class="image-item">
                     <img src="https://static-01.daraz.com.np/p/d2057b96c7a8d66240b91cb06e91b54e.jpg_750x750.jpg_.webp" 
                     alt="Toy6">
-                    <p>Wooden Puzzle Montessori Toys Alphabet Number Shape Matching Early Educational Games</p>
+                    <p>Wooden Puzzle Montessori Toys Alphabet Number Shape Matching Educational Games</p>
                 </div>
             </div>
 
