--- a/faqs.html
+++ b/faqs.html
@@ -187,6 +187,8 @@
     <footer>
         <p>&copy; 2024 Sana Sana Babu Nani Online Store. All rights reserved.</p>
     </footer>
+
+    <script src="search.js"></script>
 </body>
 
 </html>
