--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
                     <button type="submit">Search</button>
                     <div id="search-suggestions" class="suggestions-dropdown"></div>
                     <nav>
-                        <a href="login.html">Login</a> &nbsp; | &nbsp;
+                        <a href="login.html">Login</a> &nbsp; |
                         <a href="carts.html">My Carts</a>
                     </nav>
                 </div>
@@ -41,7 +41,7 @@
     </header>
 
     <nav class="main-nav">
-        <a href="index.html"><u>Home</u></a> &nbsp; | &nbsp;
+        <a href="index.html"><u>Home</u></a> &nbsp; |
 
         <!-- Collection Dropdown -->
         <div class="dropdown">
@@ -86,7 +86,9 @@
                         <li>Saturday: 9AM - 5PM</li>
                         <li>Sunday: Closed</li>
                     </ul></p>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3531.0919036988043!2d85.336151!3d27.7453112!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39eb19002f2fb05f%3A0x693b69cc714ec66c!2sSneha%20Colony%20Srijanshil%20tol%20basundhara!5e0!3m2!1sen!2snp!4v1721204550995!5m2!1sen!2snp" width="500" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3531.0919036988043!2d85.336151!3d27.7453112!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39eb19002f2fb05f%3A0x693b69cc714ec66c!2sSneha%20Colony%20Srijanshil%20tol%20basundhara!5e0!3m2!1sen!2snp!4v1721204550995!5m2!1sen!2snp" 
+                    width="500" height="350" style="border:0;" allowfullscreen="" 
+                    loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
         </div>
@@ -96,5 +98,7 @@
     <footer>
         <p>&copy; 2024 Sana Sana Babu Nani Online Store. All rights reserved.</p>
     </footer>
+
+    <script src="search.js"></script>
 </body>
 </html>
