--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
         <section id="home">
             <h2>Home</h2>
             <p style="font-size: 18px;">Welcome to our online store. Browse our products and enjoy shopping!</p>
+            <div class="slide_background">
             <section class="slider_container">
                 <section class="slider">
                   <div class="slide one">
@@ -93,6 +94,7 @@
                   </div>
                 </section>
               </section>
+              </div>
         </section>
         
         <hr>
