--- a/product1.html
+++ b/product1.html
@@ -64,7 +64,9 @@
         <section id="product1">
             <h2>Long Sleeve Baby Boy Girl Bodysuit Muslin Cotton Spring 
                 Autumn Kids Baby Rompers Clothes 0-24 Months Infant Newborn Jumpsuit</h2>
+            <div class="product-background">
             <img src="Pictures/Dress.jpg" alt="Dress" class="product-image">
+            </div>
             <p>Price: Rs. 500</p>
             <button class="add-to-cart-btn">Add to Cart</button>
             <br><br>
