--- a/product2.html
+++ b/product2.html
@@ -63,7 +63,9 @@
     <main class="product-details">
         <section id="product2">
             <h2>Children's Summer Vest Shorts Suit Boy Blazers Clothes Performance Host Wedding Dress Kids Waistcoat Pants Bowtie Clothes Set</h2>
+            <div class="product-background">
             <img src="Pictures/Boy Dress.jpg" alt="Boy Dress" class="product-image">
+            </div>
             <p>Price: Rs. 350</p>
             <button class="add-to-cart-btn">Add to Cart</button>
             <br><br>
