--- a/product3.html
+++ b/product3.html
@@ -64,7 +64,9 @@
         <section id="product3">
             <h2>Cute Baby Children's Socks Toddler Baby Kids Girls Solid 
                 Knee-High Socks Stockings Mid-Calf Length Princess Sock</h2>
+                <div class="product-background">
             <img src="Pictures/Socks.jpg" alt="Socks" class="product-image">
+            </div>
             <p>Price: Rs. 300</p>
             <button class="add-to-cart-btn">Add to Cart</button>
             <br><br>
