--- a/product4.html
+++ b/product4.html
@@ -63,7 +63,9 @@
     <main class="product-details">
         <section id="product4">
             <h2>Girls Poof Girl! Black Floral Size Small to Medium (7-8) Leggings NWOT</h2>
+            <div class="product-background">
             <img src="Pictures/Girl trouser.jpg" alt="Girl Trouser" class="product-image">
+            </div>
             <p>Price: Rs. 300</p>
             <button class="add-to-cart-btn">Add to Cart</button>
             <br><br>
