--- a/boysdress.html
+++ b/boysdress.html
@@ -96,7 +96,7 @@
                 </div>
                 <div class="image-item">
                     <img src="Pictures/Dress.jpg" alt="Boydress6">
-                    <p>Long Sleeve Baby Boy Girl Bodysuit</p>
+                    <p>Long Sleeve Baby Boy Bodysuit</p>
                 </div>
             </div>
 
