--- a/girlsdress.html
+++ b/girlsdress.html
@@ -69,7 +69,7 @@
             <div class="image-container">
                 <div class="image-item">
                     <img src="Pictures/Dress.jpg" alt="Girldress1">
-                    <p>Long Sleeve Baby Boy Girl Bodysuit</p>
+                    <p>Long Sleeve Baby Girl Bodysuit</p>
                 </div>
                 <div class="image-item">
                     <img src="Pictures/Socks.jpg" alt="Girldress2">
