--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
     <main class="page">
         <section id="home">
             <h2>Home</h2>
-            <p style="font-size: 18px;">Welcome to our online store. Browse our products and enjoy shopping!</p>
+            <p style="font-size: 18px;">Welcome to our online store. 
+                Browse our products and enjoy shopping!</p>
             <div class="slide_background">
             <section class="slider_container">
                 <section class="slider">
