--- a/product2.html
+++ b/product2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - Sana Sana Babu Nani Online Store</title>
+    <title>Product2 - Sana Sana Babu Nani Online Store</title>
     <style>
         body {
             font-family: 'Times New Roman', Times, serif;
@@ -104,7 +104,7 @@
         </section>
     </main>
 
-    <footer style="background-color: rgb(0, 0, 0); color: rgb(255, 255, 255); padding: 10px;">
+    <footer>
         <p>&copy; 2024 Sana Sana Babu Nani Online Store. All rights reserved.</p>
     </footer>
 </body>
