--- a/product2.html
+++ b/product2.html
@@ -62,7 +62,8 @@
 
     <main class="product-details">
         <section id="product2">
-            <h2>Children's Summer Vest Shorts Suit Boy Blazers Clothes Performance Host Wedding Dress Kids Waistcoat Pants Bowtie Clothes Set</h2>
+            <h2>Children's Summer Vest Shorts Suit Boy Blazers Clothes Performance 
+                Host Wedding Dress Kids Waistcoat Pants Bowtie Clothes Set</h2>
             <div class="product-background">
             <img src="Pictures/Boy Dress.jpg" alt="Boy Dress" class="product-image">
             </div>
@@ -70,13 +71,21 @@
             <button class="add-to-cart-btn">Add to Cart</button>
             <br><br>
             <h3>Product Description</h3>
-            <p>This stylish and trendy vest and shorts suit is perfect for boys aged 2-4 years old. It's ideal for various occasions, including performances, weddings, and casual wear. The set includes a vest, shorts, waistcoat, pants, and a bowtie, ensuring your child looks smart and fashionable.</p>
+            <p>This stylish and trendy vest and shorts suit is perfect for boys aged 2-4 years old. 
+                It's ideal for various occasions, including performances, weddings, and casual wear. 
+                The set includes a vest, shorts, waistcoat, pants, and a bowtie, 
+                ensuring your child looks smart and fashionable.</p>
             <ul>
-                <li><u>Stylish and Trendy Design:</u> Perfect for boys aged 2-4 years old. The floral pattern and short-sleeved shirt design are ideal for various occasions.</li>
-                <li><u>Durable and Comfortable:</u> Made from a high-quality polyester and cotton blend fabric, ensuring durability and comfort.</li>
-                <li><u>Versatile and Practical:</u> Suitable for children aged 1-4 years old, designed with a patterned shirt and shorts for added versatility.</li>
-                <li><u>Customizable and Available in Various Colors:</u> Available in various colors to match your child's personality and style.</li>
-                <li><u>Ready to Stock:</u> In-stock and available for immediate purchase, providing the perfect outfit for your child.</li>
+                <li><u>Stylish and Trendy Design:</u> Perfect for boys aged 2-4 years old. 
+                    The floral pattern and short-sleeved shirt design are ideal for various occasions.</li>
+                <li><u>Durable and Comfortable:</u> Made from a high-quality polyester 
+                    and cotton blend fabric, ensuring durability and comfort.</li>
+                <li><u>Versatile and Practical:</u> Suitable for children aged 1-4 years old, 
+                    designed with a patterned shirt and shorts for added versatility.</li>
+                <li><u>Customizable and Available in Various Colors:</u> Available in various 
+                    colors to match your child's personality and style.</li>
+                <li><u>Ready to Stock:</u> In-stock and available for immediate purchase, 
+                    providing the perfect outfit for your child.</li>
             </ul>
             <h3>Specifications</h3>
             <table class="product-specs">
