--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <span></span>
     </label>
     <nav class="main-nav">
-        <a href="index.html"><u>Home</u></a> &nbsp; |
+        <a href="index.html"><u>Home</u></a> &nbsp; <li class="separator">|</li>
         <div class="dropdown">
             <button class="dropbtn"><u>Collection</u></button>
             <div class="dropdown-content">
@@ -49,8 +49,8 @@
                 <a href="toy.html">Toy</a>
             </div>
         </div>
-        &nbsp; | &nbsp;
-        <a href="faqs.html"><u>FAQs</u></a> &nbsp; | &nbsp;
+        &nbsp; <li class="separator">|</li> &nbsp;
+        <a href="faqs.html"><u>FAQs</u></a> &nbsp; <li class="separator">|</li> &nbsp;
         <a href="contact.html"><u>Contact Us</u></a>
     </nav>
     </header>
