--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
                 </div>
                 <div class="search-login">
                     <input type="text" id="search" name="search" placeholder="Search for products...">
-                    <button type="submit">Search</button>
+                    <button type="submit" >Search</button>
                     <div id="search-suggestions" class="suggestions-dropdown"></div>
                     <nav>
                         <a href="login.html">Login</a> &nbsp; |
@@ -31,12 +31,14 @@
                 </div>
             </div>
         </div>
-    </header>
-
+        <input type="checkbox" id="menu-toggle" class="menu-toggle"/>
+    <label for="menu-toggle" class="hamburger-menu">
+        <span></span>
+        <span></span>
+        <span></span>
+    </label>
     <nav class="main-nav">
-        <a href="index.html"><u>Home</u></a> &nbsp; |
-
-        <!-- Collection Dropdown -->
+        <a href="index.html"><u>Home</u></a> &nbsp; <li class="separator">|</li>
         <div class="dropdown">
             <button class="dropbtn"><u>Collection</u></button>
             <div class="dropdown-content">
@@ -47,11 +49,11 @@
                 <a href="toy.html">Toy</a>
             </div>
         </div>
-
-        &nbsp; | &nbsp;
-        <a href="faqs.html"><u>FAQs</u></a> &nbsp; | &nbsp;
+        &nbsp; <li class="separator">|</li> &nbsp;
+        <a href="faqs.html"><u>FAQs</u></a> &nbsp; <li class="separator">|</li> &nbsp;
         <a href="contact.html"><u>Contact Us</u></a>
     </nav>
+    </header>
 
     <main>
         <div id="contact">
