--- a/bestseller.html
+++ b/bestseller.html
@@ -22,7 +22,7 @@
                 </div>
                 <div class="search-login">
                     <input type="text" id="search" name="search" placeholder="Search for products...">
-                    <button type="submit">Search</button>
+                    <button type="submit" >Search</button>
                     <div id="search-suggestions" class="suggestions-dropdown"></div>
                     <nav>
                         <a href="login.html">Login</a> &nbsp; |
@@ -38,7 +38,7 @@
         <span></span>
     </label>
     <nav class="main-nav">
-        <a href="index.html"><u>Home</u></a> &nbsp; |
+        <a href="index.html"><u>Home</u></a> &nbsp; <li class="separator">|</li>
         <div class="dropdown">
             <button class="dropbtn"><u>Collection</u></button>
             <div class="dropdown-content">
@@ -49,8 +49,8 @@
                 <a href="toy.html">Toy</a>
             </div>
         </div>
-        &nbsp; | &nbsp;
-        <a href="faqs.html"><u>FAQs</u></a> &nbsp; | &nbsp;
+        &nbsp; <li class="separator">|</li> &nbsp;
+        <a href="faqs.html"><u>FAQs</u></a> &nbsp; <li class="separator">|</li> &nbsp;
         <a href="contact.html"><u>Contact Us</u></a>
     </nav>
     </header>
