--- a/index.html
+++ b/index.html
@@ -29,8 +29,11 @@
                     <button type="submit" >Search</button>
                     <div id="search-suggestions" class="suggestions-dropdown"></div>
                     <nav>
-                        <a href="login.html">Login</a> &nbsp; |
-                        <a href="carts.html">My Carts</a>
+                        <ul class="nav navbar-nav navbar-right">
+                            <li><a href="#"><span class="glyphicon glyphicon-user"></span> Your Account</a></li> &nbsp; |
+                            <li><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span> Cart</a></li>
+                          </ul>
+
                     </nav>
                 </div>
             </div>
