--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <div id="search-suggestions" class="suggestions-dropdown"></div>
                     <nav>
                         <ul class="nav navbar-nav navbar-right">
-                            <li><a href="#"><span class="glyphicon glyphicon-user"></span></a></li> &nbsp; |
+                            <li><a href="#"><span class="glyphicon glyphicon-user"></span></a></li>
                             <li><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span></a></li>
                           </ul>
 
