--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
 
     <main class="page">
         <section id="home">
-            <h2>Home</h2>
+            <h2><b>Home</b></h2>
             <p style="font-size: 18px;">Welcome to our online store. 
                 Browse our products and enjoy shopping!</p>
             <div class="slide_background">
-            <section class="slider_container">
+            <section class="slider_id">
                 <section class="slider">
                   <div class="slide one">
                     <img src="https://cdn.cdnparenting.com/articles/2017/10/418461847-H.webp" 
@@ -103,7 +103,7 @@
         <hr>
 
         <section id="products">
-            <h2>Products</h2>
+            <h2><b>Products</b></h2>
 
             <div class="products-container">
                 <!-- Product 1 -->
