--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
                 </div>
                 <div class="search-login">
                     <input type="text" id="search" name="search" placeholder="Search for products...">
-                    <button type="submit" >Search</button>
-                    <div id="search-suggestions" class="suggestions-dropdown"></div>
+                    <button type="button" class="btn btn-primary">Search</button> 
+                    <div id="search-suggestions" class="suggestions-dropdown"></div>&nbsp;
                     <nav>
-                        <ul class="nav navbar-nav navbar-right">
-                            <li><a href="#"><span class="glyphicon glyphicon-user"></span></a></li>
-                            <li><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span></a></li>
-                          </ul>
+                        <div class="nav navbar-nav navbar-right">
+                            <a href="#"><span class="glyphicon glyphicon-user"></span></a> &nbsp;
+                            <a href="#"><span class="glyphicon glyphicon-shopping-cart"></span></a>&nbsp;
+                        </div>
 
                     </nav>
                 </div>
