--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <nav>
                         <div class="nav navbar-nav navbar-right">
                             <a href="#"><span class="glyphicon glyphicon-user"></span></a> &nbsp;
-                            <a href="#"><span class="glyphicon glyphicon-shopping-cart"></span></a>&nbsp;
+                            <a href="#"><span class="glyphicon glyphicon-shopping-cart"></span><span class="badge">0</span></a>&nbsp;
                         </div>
 
                     </nav>
