--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                     <div id="search-suggestions" class="suggestions-dropdown"></div>&nbsp;
                     <nav>
                         <div class="nav navbar-nav navbar-right">
-                            <a href="#"><span class="glyphicon glyphicon-user"></span></a> &nbsp;
-                            <a href="#"><span class="glyphicon glyphicon-shopping-cart"></span><span class="badge">0</span></a>&nbsp;
+                            <a href="login.html"><span class="glyphicon glyphicon-user"></span></a> &nbsp;
+                            <a href="carts.html"><span class="glyphicon glyphicon-shopping-cart"></span><span class="badge">0</span></a>&nbsp;
                         </div>
 
                     </nav>
@@ -63,8 +63,8 @@
                       <li><a href="toy.html">Toy</a></li>
                     </ul>
                   </li>
-                  <li><a href="#">FAQs</a></li>
-                  <li><a href="#">Contact-Us</a></li>
+                  <li><a href="faqs.html">FAQs</a></li>
+                  <li><a href="contact.html">Contact-Us</a></li>
                 </ul>
               </div>
             </div>
