--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="header-flex">
                 <div class="logo-title">
                     <img src="Pictures/SSBNOS Logo.png" alt="SSBNOS Logo" class="logo">
-                    <h1>Sana Sana Babu Nani Online Store</h1>
+                    <h1><b>Sana Sana Babu Nani Online Store</b></h1>
                 </div>
                 <div class="search-login">
                     <input type="text" id="search" name="search" placeholder="Search for products...">
