--- a/faqs.html
+++ b/faqs.html
@@ -74,7 +74,7 @@
 
     <main class="main-content">
         <section id="faqs">
-            <h2>Frequently Asked Questions (FAQs)</h2>
+            <h2><b>Frequently Asked Questions (FAQs)</b></h2>
 
             <div class="panel-group" id="accordion">
                 <div class="panel panel-default">
