--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
             </div>
 
            <div class="button-container">
-    <button type="button" class="btn btn-primary">See More</button>
+            <a href="seemore.html"><button type="button" class="btn btn-primary">See More</button></a>
 </div>
 
         </section>
